# LiFT

./: .gitignore  LICENSE  README.md  pyproject.toml
assets/: 76198.webm
lift/: __init__.py  demo.py  dinov2.py  feat_utils.py  layers.py  model.py  viz_utils.py
shared/: __init__.py
shared/run/: cut_clips_ego4d.sh  extract_feat_dinov2_ego4d.sh  extract_feat_pe_ego4d.sh  extract_feat_pe_ego4d_reverse.sh  generate_water.py  generate_water_v2.py  run.sh
shared/scripts/: avi_to_mp4.py  check_cut_files.py  check_video_health.py  check_webdataset.py  convert_frames_to_videos.py  convert_webm_to_mp4.py  create_webdataset.py  cut_clips.py  cut_clips_fast.py  cut_multiple_clips.py  downscale_videos.py  downsize_videos.py  downsize_videos_simple.py  extract_speed_clips.py  save_grid_of_videos.py  shard_video_dataset.py
shared/utils/: __init__.py  gif.py  video.py  visualize.py
