[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lift-video"
version = "0.1.0"
description = "LiFT: Linearized Feature Trajectories for Time-Aware Video Representation Learning"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Piyush Bagad", email = "piyush.bagad@eng.ox.ac.uk"},
]
keywords = ["video", "representation learning", "temporal", "DINOv2", "transformer", "deep learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "lightning>=2.0.0",
    "einops>=0.6.0",
    "timm>=0.9.0",
    "decord>=0.6.0",
    "matplotlib>=3.5.0",
    "opencv-python>=4.5.0",
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "tqdm>=4.60.0",
    "scikit-learn>=1.0.0",
    "termcolor>=1.1.0",
    "Pillow>=8.0.0",
    "gdown>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "ipdb",
    "ipywidgets",
    "seaborn",
    "ffmpeg-python",
]
full = [
    "ipdb",
    "ipywidgets",
    "seaborn",
    "ffmpeg-python",
    "bokeh",
]

[project.urls]
Homepage = "https://bpiyush.github.io/lift-website/"
Repository = "https://github.com/bpiyush/LiFT"
Documentation = "https://github.com/bpiyush/LiFT#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["lift*", "shared*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.txt"]

